--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    ksp {
+        arg("room.schemaLocation","$projectDir/schemas".toString())
+    }
 }
 
 dependencies {
