--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,9 @@ android {
     ksp {
         arg("room.schemaLocation","$projectDir/schemas".toString())
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
