--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.devtools.ksp' version '1.7.20-1.0.7'
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
 android {
@@ -61,4 +62,7 @@ dependencies {
 
     // ViewModels
     implementation 'androidx.activity:activity-ktx:1.6.1'
+
+    // Services google play
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
 }
