--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,21 @@ dependencies {
     // ViewModels
     implementation 'androidx.activity:activity-ktx:1.6.1'
 
-    // Services google play
+    // Services google maps
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
+    implementation 'com.google.maps.android:android-maps-utils:2.2.0'
+
+    // Gson
+    implementation 'com.google.code.gson:gson:2.10.1'
+
+    // Maps SDK for Android KTX Library
+    implementation 'com.google.maps.android:maps-ktx:3.0.0'
+
+    // Maps SDK for Android Utility Library KTX Library
+    implementation 'com.google.maps.android:maps-utils-ktx:3.0.0'
+
+    // Lifecycle Runtime KTX Library
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+
+    implementation 'com.google.android.libraries.places:places:3.1.0'
 }
