--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
     <application
@@ -23,6 +24,9 @@
 
         <activity
             android:name=".ui.GeofenceActivity"
+            android:exported="false" />
+        <activity
+            android:name=".model.place.MapsActivityCurrentPlace"
             android:exported="false" />
         <activity
             android:name=".ui.NewGeofenceActivity"
