--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,5 +79,10 @@ dependencies {
     // Lifecycle Runtime KTX Library
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
 
+    // Location place
     implementation 'com.google.android.libraries.places:places:3.1.0'
+
+    // Recycler view
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
 }
