--- a/local.properties
+++ b/local.properties
@@ -6,4 +6,4 @@
 # header note.
 #Thu Jun 08 14:46:59 CEST 2023
 sdk.dir=C\:\\Users\\Vincent\\AppData\\Local\\Android\\Sdk
-MAPS_API_KEY=AIzaSyBEyQOfOPot0fWGRekwUwhqGe8FxsdST_U
+MAPS_API_KEY=KEY
